small fixes, spacing adjustments, misc

--- a/app/styles/extends.scss
+++ b/app/styles/extends.scss
@@ -3,8 +3,8 @@
   // http://stackoverflow.com/questions/14562457/center-oversized-image-in-div
   margin: auto;
   position: absolute;
-  top: -1080px;
-  left: -1920px;
-  right: -1920px;
-  bottom: -1080px;
+  top:    -9999px;
+  left:   -9999px;
+  right:  -9999px;
+  bottom: -9999px;
 }
